--- a/src/components/HomePage/home_page.css
+++ b/src/components/HomePage/home_page.css
@@ -3,11 +3,13 @@ form {
   margin: 30px auto 10px;
   text-align: center;
 }
+
 label input {
   height: 0;
   width: 0;
   opacity: 0;
 }
+
 label {
   display: block;
   width: 30px;
@@ -15,12 +17,26 @@ label {
   border: 1px solid var(--primary);
   border-radius: 50%;
   margin: 10px auto;
-  line-height: 30px;
+  line-height: 27px;
   color: var(--primary);
   font-weight: bold;
   font-size: 24px;
 }
+
 label:hover {
   background: var(--primary);
   color: white;
+  cursor: pointer;
+}
+
+.error-message {
+  color: var(--error);
+}
+.output {
+  height: 60px;
+  font-size: 0.8rem;
+}
+
+.page-container {
+  text-align: left;
 }
