--- a/src/components/HomePage/home_page.css
+++ b/src/components/HomePage/home_page.css
@@ -40,3 +40,14 @@ label:hover {
 .page-container {
   text-align: left;
 }
+
+@media (prefers-color-scheme: dark) {
+  label {
+    border: 1px solid #faf4d3;
+    color: #faf4d3;
+  }
+  label:hover {
+    background: #faf4d3;
+    color: #0c1618;
+  }
+}
