--- a/src/components/ImageGrid/image_grid.css
+++ b/src/components/ImageGrid/image_grid.css
@@ -19,10 +19,11 @@
 }
 
 .img-wrap img {
+  position: absolute;
   min-width: 100%;
   min-height: 100%;
   max-width: 150%;
-  position: absolute;
-  top: 0;
-  left: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
