--- a/src/components/ImageGrid/image_grid.css
+++ b/src/components/ImageGrid/image_grid.css
@@ -27,3 +27,16 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+@media (max-width: 1100px) {
+  .img-grid {
+    margin: 15px auto;
+    gap: 25px;
+  }
+}
+@media (max-width: 540px) {
+  .img-grid {
+    margin: 1px auto;
+    gap: 18px;
+  }
+}
