--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -30,7 +30,7 @@
   background: #e9e9e957;
 }
 
-.login-form button {
+.login-btn {
   border: none;
   color: #ffffff;
   padding: 20px;
@@ -46,4 +46,10 @@
     rgba(241, 197, 194, 1) 15%,
     rgba(159, 194, 236, 1) 80%
   );
+
+  &.--disabled {
+    background: #e9e9e957;
+    color: #4e4e4e;
+    pointer-events: none;
+  }
 }
