--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -6,11 +6,20 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .backdrop img {
   display: block;
   max-width: 80%;
   max-height: 80%;
-  margin: 100px auto;
+}
+
+@media (max-width: 1100px) {
+  .backdrop img {
+    max-width: 70%;
+    max-height: 70%;
+  }
 }
