--- a/src/index.css
+++ b/src/index.css
@@ -72,7 +72,19 @@ h2 {
   }
 }
 
-@media (prefers-color-scheme: dark) {
+@media (max-width: 1100px) {
+  body {
+    max-width: 700px;
+  }
+}
+
+@media (max-width: 700px) {
+  body {
+    max-width: 500px;
+  }
+}
+
+/* @media (prefers-color-scheme: dark) {
   :root {
     color: #2a9d8f;
     background-color: #0c1618;
@@ -84,4 +96,4 @@ h2 {
     border: 2px solid #faf4d3;
     border-top-color: #004643;
   }
-}
+} */
