--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -1,21 +1,23 @@
 .login-page {
   display: flex;
+  position: relative;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-width: 100%;
+  width: 100vw;
+  margin-left: calc(50% - 50vw);
   min-height: 100vh;
+  background: #fafafa;
 }
 
 .login-form {
   display: flex;
+  width: 60%;
   flex-direction: column;
   color: #4e4e4e;
-  padding: 50px 30px;
-  border-radius: 10px;
-  width: 260px;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
-    rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+  background: #ffffff;
+  padding: 80px 50px 35px 50px;
+  width: 350px;
 }
 
 .login-form label {
@@ -24,32 +26,43 @@
 
 .login-form input {
   border: none;
-  margin: 10px 0;
-  border-radius: 10px;
+  margin: 0px 0 10px 0;
   padding: 10px;
-  background: #e9e9e957;
+  border-bottom: 2px solid #4e4e4e;
+  background: transparent;
 }
 
 .login-btn {
   border: none;
   color: #ffffff;
   padding: 20px;
-  border-radius: 10px;
+  border-radius: 30px;
   cursor: pointer;
-  border: 1px solid #ffffff00;
-  margin-top: 10px;
+  margin-top: 35px;
   font-size: 16px;
   font-weight: 500;
-  background: rgb(241, 197, 194);
-  background: linear-gradient(
-    30deg,
-    rgba(241, 197, 194, 1) 15%,
-    rgba(159, 194, 236, 1) 80%
-  );
+  background: #93bcee;
 
   &.--disabled {
-    background: #e9e9e957;
-    color: #4e4e4e;
     pointer-events: none;
   }
+}
+
+.login-btn:hover {
+  background: #73a8e9;
+}
+
+.login-card {
+  display: flex;
+  border-radius: 10px;
+  overflow: hidden;
+  max-width: 450px;
+  height: 400px;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+}
+
+.login-image {
+  width: 40%;
+  background-image: url("../../assets/IMG_7568.jpg");
+  background-size: cover;
 }
