--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -26,7 +26,7 @@
 
 .login-form input {
   border: none;
-  margin: 0px 0 10px 0;
+  margin: 0 0 10px 0;
   padding: 10px;
   border-bottom: 2px solid #4e4e4e;
   background: transparent;
@@ -65,4 +65,39 @@
   width: 40%;
   background-image: url("../../assets/IMG_7568.jpg");
   background-size: cover;
+}
+
+@media (max-width: 475px) {
+  .login-image {
+    display: none;
+  }
+
+  .login-card {
+    max-width: 350px;
+    height: 75vh;
+    box-shadow: none;
+  }
+
+  .login-page h1 {
+    font-size: 45px;
+  }
+
+  .login-form {
+    padding: 40px 10px;
+    background: #fafafa;
+  }
+
+  .login-btn {
+    margin-top: auto;
+    font-size: 20px;
+  }
+
+  .login-form input {
+    margin: 0 0 50px 0;
+    padding: 15px;
+  }
+
+  .login-form label {
+    font-size: 18px;
+  }
 }
