--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,11 @@ h2 {
     width: 16px;
     height: 16px;
   }
+
+  &.--primary {
+    border: 2px solid var(--primary);
+    border-top-color: #8c8c8c;
+  }
 }
 
 .header-container {
@@ -85,5 +90,19 @@ h2 {
 @media (max-width: 700px) {
   body {
     max-width: 500px;
+  }
+
+  h2 {
+    margin-top: 30px;
+    font-size: 2.2rem;
+  }
+
+  .upload-form {
+    display: flex;
+    margin: 30px auto;
+  }
+
+  .header-container {
+    padding: 0 5px;
   }
 }
