--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -3,12 +3,13 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.65);
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 1;
 }
 
 .backdrop img {
